#
# Copyright (c) [2020] Huawei Technologies Co., Ltd. All rights reserved.
#
# Licensed under the Mulan Permissive Software License v2.
# You can use this software according to the terms and conditions of the MulanPSL - 2.0.
# You may obtain a copy of MulanPSL - 2.0 at:
#
#     https://opensource.org/licenses/MulanPSL-2.0
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the MulanPSL - 2.0 for more details.
#

configs = [
        "${MAPLEALL_ROOT}:mapleallcompilecfg",
    ]

include_directories = [
    "${MAPLEALL_ROOT}/maple_util/include",
    "${MAPLE_ROOT}/huawei_secure_c/include"
]
static_library("libmempool"){
   sources = [
      "src/MapleString.cpp",
      "src/MP.cpp",
    ]

    include_dirs = include_directories

    output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}

executable("MemPool"){
    sources = [
        "src/MPTest.cpp",
    ]

    include_dirs = include_directories

    deps = [
        ":libmempool",
        "${MAPLEALL_ROOT}/maple_util:libmplutil",
        "${MAPLE_ROOT}/huawei_secure_c:libHWSecureC",
    ]
}
