#
# Copyright (c) [2020] Huawei Technologies Co., Ltd. All rights reserved.
#
# Licensed under the Mulan Permissive Software License v2.
# You can use this software according to the terms and conditions of the MulanPSL - 2.0.
# You may obtain a copy of MulanPSL - 2.0 at:
#
#     https://opensource.org/licenses/MulanPSL-2.0
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the MulanPSL - 2.0 for more details.
#

configs = [
        "${MAPLEALL_ROOT}:mapleallcompilecfg",
    ]

include_directories = [
    "${MAPLEALL_ROOT}/external",
    "${MAPLEALL_ROOT}/mpl2mpl/include",
    "${MAPLEALL_ROOT}/maple_ir/include",
    "${MAPLEALL_ROOT}/maple_ipa/include",
    "${MAPLEALL_ROOT}/maple_me/include",
    "${MAPLEALL_ROOT}/maple_loo/include",
    "${MAPLEALL_ROOT}/mempool/include",
    "${MAPLEALL_ROOT}/maplevm/include",
    "${MAPLEALL_ROOT}/maple_phase/include",
    "${MAPLEALL_ROOT}/maple_util/include",
    "${MAPLEALL_ROOT}/mapleradar/include",
    "${HUAWEI_SECURE_C_ROOT}/include",
]

static_library("libmpl2mpl"){
    sources = [
        "src/mpl2mplexe.cpp",
        "src/class_hierarchy.cpp",
        "src/class_init.cpp",
        "src/barrierinsertion.cpp",
        "src/deferralbarrier.cpp",
        "src/java_eh_lower.cpp",
        "src/java_lowering.cpp",
        "src/native_stub_func.cpp",
        "src/muid_replacement.cpp",
        "src/coderelayout.cpp",
        "src/simplify.cpp",
        "src/gen_check_cast.cpp",
        "src/analyzector.cpp",
        "src/scalarreplacement.cpp",
        "src/reflection_analysis.cpp",
        "src/vtable_analysis.cpp",
        "src/vtable_impl.cpp",
        "src/decouple.cpp",
    ]

    include_dirs = include_directories

    output_name = "liblibmpl2mpl"

    output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}

executable("mpl2mpl"){
    sources = [
       "src/driver.cpp",
    ]

    deps = [
        "${MAPLEALL_ROOT}/maple_ipa:libmplipa",
        "${MAPLEALL_ROOT}/mpl2mpl:libmpl2mpl",
        "${MAPLEALL_ROOT}/maple_phase:libmplphase",
        "${MAPLEALL_ROOT}/maple_me:libmplme",
        "${MAPLEALL_ROOT}/maple_me:libmplmewpo",
        "${MAPLEALL_ROOT}/maple_ir:libmplir",
        "${MAPLEALL_ROOT}/mempool:libmempool",
        "${MAPLEALL_ROOT}/maple_util:libmplutil",
        "${HUAWEI_SECURE_C_ROOT}:libHWSecureC",
    ]

    include_dirs = include_directories
}
